--- a/7zip-zstd/7zip-zstd.nuspec
+++ b/7zip-zstd/7zip-zstd.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>7zip-zstd</id>
-    <version>1.5.0.20-beta</version>
+    <version>1.5.2.1</version>
     <packageSourceUrl>https://github.com/zverev-iv/choco-7zip-zstd</packageSourceUrl>
     <owners>zverev-iv</owners>
     <title>7zip-zstd (Install)</title>
